--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
   </head>
   <body class="font-['Inter'] antialiased bg-gray-50 text-gray-900">
-    <div id="root"></div>
+    <div id="root">
+      <!-- Splash Screen -->
+      <div id="splash-screen" style="position: fixed; inset: 0; display: flex; flex-direction: column; align-items: center; justify-content: center; background-color: #f8fafc; z-index: 9999; transition: opacity 0.5s ease;">
+        <div style="width: 64px; height: 64px; border: 4px solid #e2e8f0; border-top-color: #0ea5e9; border-radius: 50%; animation: spin 1s linear infinite;"></div>
+        <p style="margin-top: 16px; font-family: sans-serif; font-weight: 600; color: #64748b; tracking: 0.05em; text-transform: uppercase; font-size: 12px;">FinTracker Loading...</p>
+      </div>
+      <style>
+        @keyframes spin { to { transform: rotate(360deg); } }
+        .dark #splash-screen { background-color: #0f172a !important; color: #94a3b8 !important; }
+      </style>
+    </div>
     <script type="module" src="/src/main.jsx"></script>
     <script>
       if ('serviceWorker' in navigator) {
